--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,7 @@ repos:
         types: [ python ]
         args:
           [
-            'chechbox_api'
-            '-rn'
-            '-sn'
+            './checkbox_api',
+            '-rn',
+            '-sn',
           ]
