--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,15 +13,17 @@ fastapi = "0.115.0"
 asyncpg = "0.29.0"
 sqlmodel = "0.0.22"
 fastapi-utils = {extras = ["session"], version = "0.7.0"}
-mypy = "1.11.2"
-pylint = "3.3.0"
 pydantic-settings = "2.5.2"
 redis = "5.0.8"
 aioredis = "2.0.1"
 piccolo-api = "1.5.2"
-uvicorn = "^0.30.6"
-bcrypt = "^4.2.0"
-typing-inspect = "^0.9.0"
+uvicorn = "0.30.6"
+bcrypt = "4.2.0"
+typing-inspect = "0.9.0"
+
+[tool.poetry.dev-dependencies]
+mypy = "1.11.2"
+pylint = "3.3.0"
 pre-commit = "^3.8.0"
 
 [build-system]
